angular-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: angular-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: angular.yourdomain.com  # Заменить на свой домен
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: angular-app
                port:
                  number: 80
